--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = country # 'Italy'\n",
+    "italy = countries[] # 'Italy'\n",
     "italy"
    ]
   },
